[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "webprobe"
version = "0.1.0"
description = "Fast, async website health checker and performance analyzer"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Sofia Willow", email = "sofia.oc.willow@gmail.com"},
]
keywords = ["health-check", "website", "async", "ssl", "performance", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.9,<4",
    "rich>=13.0,<14",
    "click>=8.1,<9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "aioresponses>=0.7",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
webprobe = "webprobe.cli:main"

[project.urls]
Homepage = "https://github.com/sofia-willow/webprobe"
Repository = "https://github.com/sofia-willow/webprobe"
Issues = "https://github.com/sofia-willow/webprobe/issues"

[tool.setuptools.packages.find]
include = ["webprobe*"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
